_dbus_write_uuid_file: factor out function to write a known UUID

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=77941
Reviewed-by: Lennart Poettering